crates/action-runner/tests/snapshots/dep_graph_test__run_target__avoids_dupe_targets.snap
---
source: crates/action-runner/tests/dep_graph_test.rs
assertion_line: 213
expression: graph.to_dot()
---
digraph {
    0 [ label = "\"SetupToolchain\"" ]
    1 [ label = "\"InstallDeps(Node)\"" ]
    2 [ label = "\"SyncProject(Node, tasks)\"" ]
    3 [ label = "\"RunTarget(tasks:lint)\"" ]
    1 -> 0 [ ]
    2 -> 0 [ ]
    3 -> 1 [ ]
    3 -> 2 [ ]
}

