crates/action-runner/tests/snapshots/dep_graph_test__run_target__single_targets.snap
---
source: crates/action-runner/tests/dep_graph_test.rs
assertion_line: 125
expression: graph.to_dot()
---
digraph {
    0 [ label = "\"SetupToolchain\"" ]
    1 [ label = "\"InstallNodeDeps\"" ]
    2 [ label = "\"SyncNodeProject(tasks)\"" ]
    3 [ label = "\"RunTarget(tasks:test)\"" ]
    4 [ label = "\"RunTarget(tasks:lint)\"" ]
    1 -> 0 [ ]
    2 -> 0 [ ]
    3 -> 1 [ ]
    3 -> 2 [ ]
    4 -> 1 [ ]
    4 -> 2 [ ]
}

